--- a/parking_lot/gui/style.css
+++ b/parking_lot/gui/style.css
@@ -14,3 +14,45 @@ h1 {
     font-weight: 500;
     margin-bottom: 1rem;
 }
+
+.parking-lot {
+    align-items: center;
+    border-bottom: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 50px;
+    width: 50%;
+}
+
+.level {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.place {
+    border: 1px solid #000;
+    height: 50px;
+    width: 50px;
+}
+
+.auto {
+    background-color: yellow;
+}
+
+.bus {
+    background-color: blue;
+}
+
+.moto {
+    background-color: red;
+}
+
+
