--- a/parking_lot/gui/frontend/style.css
+++ b/parking_lot/gui/frontend/style.css
@@ -17,7 +17,6 @@ h1 {
 
 .parking-lot {
     align-items: center;
-    border-bottom: 1px solid #000;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,6 +51,7 @@ h1 {
     height: 50px;
     line-height: 50px;
     text-align: center;
+    text-overflow: ellipsis;
     width: 50px;
 }
 
