--- a/parking_lot/gui/frontend/style.css
+++ b/parking_lot/gui/frontend/style.css
@@ -12,7 +12,19 @@ body {
 h1 {
     font-size: 2.5rem;
     font-weight: 500;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 1rem 0;
+}
+
+.header {
+    align-items: center;
+    padding: 0.5rem;
+    width: 100%;
 }
 
 .parking-lot {
