--- a/parking_lot/gui/frontend/style.css
+++ b/parking_lot/gui/frontend/style.css
@@ -9,21 +9,48 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.left-dashboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 10px;
+    height: 100vh;
+    width: 50%;
+}
+
+.right-dashboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 10px;
+    height: 100vh;
+    width: 50%;
+}
+
+.right-dashboard > div {
+    margin: 50px 0;
+}
+
 h1 {
     font-size: 2.5rem;
     font-weight: 500;
-    margin: 1rem 0;
+    margin-bottom: 10px;
 }
 
 h2 {
     font-size: 1.5rem;
     font-weight: 500;
-    margin: 1rem 0;
 }
 
 .header {
     align-items: center;
-    padding: 0.5rem;
     width: 100%;
 }
 
@@ -44,6 +71,7 @@ h2 {
 .level-name {
     font-size: 1.5rem;
     font-weight: 500;
+    margin-top: 25px;
 }
 
 .row {
