--- a/parking_lot/gui/frontend/style.css
+++ b/parking_lot/gui/frontend/style.css
@@ -12,6 +12,7 @@ body {
 h1 {
     font-size: 2.5rem;
     font-weight: 500;
+    margin-bottom: 25px;
     text-align: center;
     width: 100%;
 }
@@ -21,30 +22,42 @@ h2 {
     font-weight: 500;
 }
 
-#statistics {
+h2 + div {
+    margin-top: 25px;
+}
+
+h3 {
+    color: gray;
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
+#objectives {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    justify-content: center;
-    margin: 50px 0;
+}
+
+#phases-diagram {
+    align-items: end;
+    flex: 2;
+    flex-direction: column;
+    text-align: end;
 }
 
 #queue-plot {
     margin: 25px 0;
 }
 
-.left-dashboard, .right-dashboard {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0 10px;
-    height: 100vh;
-    width: 50%;
+#vehicles-container {
+    color: blue;
 }
 
 .container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 100%;
     width: 100%;
 }
 
@@ -63,6 +76,15 @@ h2 {
     flex-direction: column;
     justify-content: center;
     min-height: 50px;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 10px;
+    height: 100%;
+    width: 50%;
 }
 
 .level {
